Fix: Search box text is not visible

--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -98,7 +98,7 @@ header .search-box {
     background-color: rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 40px;
-    color: #EEE;
+    // color: #EEE;
     z-index: 2;
     height: auto;
     padding: $-xs*1.5;
